  Plugin {
     type = dclock
     config {
         TooltipFmt = %A %x
         Action = xterm &
         color = wheat
     }
  }

* menu: items are sorted by name
* menu: icon size set to 22
* launchbar: drag-n-drop now accepts urls draged from web browsers
Fixed Bugs:
* menu: forgoten g_free's were added
* 1723786: linkage problems with --as-needed flag
* 1724852: crash if root bg is not set

4.9
* new menu placement to not cover panel; used in menu and taskbar
* taskbar: icons were added to task's menu (raise, iconify, close)
* access to WM_HINTS is done via XGetWMHints only and not via get_xa_property;
  in taskbar it fixes failure to see existing icon pixmap
* 1704709: config checks for installed devel packages

4.8
* help text in configurator was made selectable
* pager shows desktop wallpaper
* expanding tilda (~) in action field in config files
* menu icons size was set to 24 from 22 to avoid scaling
* avoid re-moving panel to same position
* plugins section in configurator dialog suggests to edit config manually
* taskbar vertical layout was fixed
* taskbar 'icons only' mode was optimized
* fbpanel config window has nice "star" icon

4.7
New Feature
* Build application menu from *.desktop files 
* Using themed icons. Change icon theme and see fbpanel updates itself
* default config files were updates to use new functionality

4.6
New Features
* [ 1295234 ] Detect Window "Urgency".
* Raise window when drag target is over its name in taskbar
* fixing meory leaks from XGetWindowProperty.
* fix urgency code to catch up urgency of new windows 
* taskbar: correct position of task's label
* taskbar: remove extra spaces
* taskbar: do not create event box beneath task button
* taskbar: use default expose method in gtk_bar
* taskbar; use default expose method in task button
* taskbar: cleaning up dnd code
* launchbar: visual feedback on button press

4.5
Fixed bugs
* Makefile.common overwrite/ignore CFLAGS and LDFLAGS env. variables